<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackgroundGrey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player_view_step_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/iv_step_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_below="@+id/exo_player_view_step_video"
            android:layout_margin="@dimen/image_margin"/>

        <TextView
            android:id="@+id/tv_step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_step_thumbnail"
            android:padding="8dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/button_previous_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="PREVIOUS"/>

        <Button
            android:id="@+id/button_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="NEXT"/>

    </RelativeLayout>

</FrameLayout>