...
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/image_margin"/>

        <TextView
            android:id="@+id/tv_recipe_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_recipe_detail_image"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:textColor="@color/colorPrimaryDark"
...
                android:textColor="@color/colorPrimaryDark"/>

        </android.support.v7.widget.CardView>

        <!--RecyclerView for holding list of recipes-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cv_list"
            android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>

    </RelativeLayout>
...
